# OpenIGTLink

./: CMakeLists.txt
Source/: CMakeLists.txt  igtlMessageBase.cxx  igtlMessageBase.h  igtlQuaternionTrackingDataMessage.cxx  igtlQuaternionTrackingDataMessage.h  igtlSocket.cxx  igtlSocket.h  igtlTrackingDataMessage.cxx  igtlTrackingDataMessage.h  igtlTrackingDataMessageBase.cxx  igtlTrackingDataMessageBase.h
Source/Swig/: CMakeLists.txt  OpenIGTLink.i
Source/swig/: OpenIGTLink.i
Testing/: CMakeLists.txt  igtlBindMessageTest.cxx  igtlImageMessage2Test.cxx  igtlImageMessageTest.cxx  igtlImageMetaMessageTest.cxx  igtlLabelMetaMessageTest.cxx  igtlNDArrayMessageTest.cxx  igtlPointMessageTest.cxx  igtlPolyDataMessageTest.cxx  igtlPositionMessageTest.cxx  igtlSensorMessageTest.cxx  igtlStatusMessageTest.cxx  igtlStringMessageTest.cxx  igtlTrackingDataMessageTest.cxx  igtlTrajectoryMessageTest.cxx  igtlTransformMessageTest.cxx
Wrapping/: CMakeLists.txt  OpenIGTLink.i  README.md
Wrapping/Python/: setup.py.in  test.py
